<resources>
    <string name="app_name">天下付简版</string>
    <string name="entrance_text">进入天下付</string>
    <string name="versions_past">该版本已过期！</string>
    <string name="network_error_check">该接入点无法连接到服务器，\n请更换接入点</string>
    <string name="kjt">天下付</string>
    <string name="warning_text">温馨提示</string>
    <string name="text_confirm">确 定</string>
    <string name="text_cancel">取 消</string>
    <string name="text_tab_home">首 页</string>
    <string name="text_tab_wallet">钱 包</string>
    <string name="text_tab_record">交易记录</string>
    <string name="agree_protocol">请勾选同意天下付协议</string>
    <string name="text_tab_more">设 置</string>
    <string name="info">信 息</string>
    <string name="sex">性 别：</string>
    <string name="lady">女 士</string>
    <string name="gentleman">男 士</string>
    <string name="nickname">昵 称：</string>
    <string name="birthday">生 日：</string>
    <string name="address">地 址：</string>
    <string name="no_input">未填写</string>
    <string name="base_info">基本信息</string>
    <string name="user_info_change_successful">个人信息修改成功</string>
    <string name="update_psd_success">密码已经修改成功</string>
    <string name="secret_question_null">密保问题不能为空</string>
    <string name="secret_update_success">密保更新成功</string>
    <string name="secret_question_double">密保问题不能重复</string>
    <string name="delete_secret_question">删除密保问题</string>
    <string name="delete_secret_question_success">密保删除成功</string>
    <string name="max_secret_question">最多只能设置三条密保！</string>
    <string name="updating_receive_info">正在修改地址详情...</string>
    <string name="deleting_receive_info">正在删除地址详情...</string>
    <string name="update_receive_info_success">修改收货信息成功！</string>
    <string name="delete_receive_info_success">删除收货信息成功！</string>
    <string name="input_answer">请输入答案</string>
    <string name="no_secret_question">没有要更新的密保</string>
    <string name="setSecretQuestionPrompt">未设置密保问题，请先设置密保问题再修改。或直接联系客服修改。</string>
    <string name="notification_title">通 知</string>
    <string name="no_wechat">手机未安装微信，无法分享，请先安装微信</string>
    <string name="duanxin">短 信</string>
    <string name="upload_avatar_fail">头像上传失败</string>
    <string name="set_avatar_fail">头像下载失败</string>
    <string name="all_read">没有未读通知</string>
    <string name="add_receiver_name">请填写收货人姓名！</string>
    <string name="input_code">邮政编码不能为空！</string>
    <string name="input_right_code">请填写正确的邮政编码！</string>
    <string name="input_detail_address">请填写详细地址！</string>
    <string name="input_address">请填写省市区！</string>
    <string name="receiving_info">正在获取收货信息...</string>
    <string name="geting_common_question">正在获取通用密保问题...</string>
    <string name="receive_info_fail">获取收货信息失败！</string>
    <string name="adding_receive_info">正在添加收货信息...</string>
    <string name="add_receive_info_fail">添加收货信息失败...</string>
    <string name="getDataFromHttp">正在获取数据...</string>
    <string name="get_user_set_secret_question">获取用户设置密保问题...</string>
    <string name="not_get_secret_question">无法获取用户设置密保问题！</string>
    <string name="question_cannot_same">问题不能相同!</string>
    <string name="sms_info">我正在使用#天下付#无需充值，可直接刷卡缴话费、信用卡还款、酒店\机票预订等，亲测好使，赶紧体验吧！
        http://www.qdone.com.cn/download.asp?app=1&amp;sp=7 果粉们请直接在appstore中输入天下付下载。</string>
    <string name="weibo_info">我正在使用一款客户端#天下付#无需充值，可直接刷银行卡缴话费、信用卡还款、酒店预订、机票预订等，
                        很潮很好用，赶紧下载体验吧！
	http://www.qdone.com.cn/download.asp?app=1&amp;sp=7</string>
    <string name="signature_title">支付签名</string>
    <string name="receive_info_title">收货信息</string>
    <string name="user_info">个人信息</string>
    <string name="no_logining_account">没有已登录的账号！</string>
    <string name="send_code_to_phone">验证码已发送到您的手机！</string>
    <string name="new_password">新密码：</string>
    <string name="manager_password">密码管理</string>
    <string name="input_signature">签名无更新，请输入新签名再提交</string>
    <string name="commiting_signature">正在提交签名...</string>
    <string name="commit_signature_fail">签名提交失败！</string>
    <string name="commit_signature_success">签名提交成功！</string>
    <string name="no_dovila_or_sd">无多惠拉和智能SD卡！</string>
    <string name="no_dovila">无多惠拉！</string>
    <string name="input_question_and_answer">请输入密保问题及答案</string>
    <string name="seting_secret_question">正在设置密保...</string>
    <string name="seting_secret_questioning"></string>
    <string name="secret_set">密保设置</string>
    <string name="secret_question_set_success">密保问题设置成功!</string>
    <string name="secret_question_set_fail">密保设置失败!</string>
    <string name="get_commonm_secret_question_fail">获取通用密保问题失败!</string>
    <string name="set_question1">请设置问题1</string>
    <string name="set_question2">请设置问题2</string>
    <string name="set_question3">请设置问题3</string>
    <string name="set_question_one">请至少设置一个问题！</string>
    <string name="set_answer1">请设置答案1</string>
    <string name="set_answer2">请设置答案2</string>
    <string name="set_answer3">请设置答案3</string>
    <string name="params_error_code">100099</string>
    <string name="params_error">参数错误</string>
    <string name="no_sd">无智能SD卡！</string>
    <string name="postcode">邮编 ：</string>
    <string name="detailed_address">详细地址 ：</string>
    <string name="select_province_city_area">请选择省市区</string>
    <string name="bankcard_name">银行卡名 ： </string>
    <string name="error_password">密码错误</string>
    <string name="account_notexist">账号不存在</string>
    <string name="changing_psd">正在修改密码,请稍候...</string>
    <string name="receive_info">收货地址</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="pay_signature">支付签名</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="input_new_phone_number">请输入新手机号</string>
    <string name="net_req_fail">网络请求失败！</string>
    <string name="change_city_cuccess">切换城市成功！</string>
    <string name="change_city_fail">切换城市失败！</string>
    <string name="changing_city">正在切换城市</string>
    <string name="change_duohuila_password">修改多惠拉密码</string>
    <string name="change_sdcard_password">修改SD卡密码</string>
    <string name="change_swpsim_password">修改swp-sim密码</string>
    <string name="secret_question">密保问题</string>
    <string name="secret_check">安全检测</string>
    <string name="safe_checking">正在进行安全检测...</string>
    <string name="set_secret_question">密保问题设置</string>
    <string name="question_one">我妈妈的名字是？</string>
    <string name="question_two">我妈妈的生日是？</string>
    <string name="question_three">我爸爸的名字是？</string>
    <string name="question_four">我爸爸的生日是？</string>
    <string name="question_five">我爱人的名字是？</string>
    <string name="question_six">我爱人的生日是？</string>
    <string name="auto_check_duohuila">多惠拉自动检测</string>
    <string name="auto_check_sdcard">SD卡自动检测</string>
    <string name="auto_check_swpsim">swp-sim自动检测</string>
    <string name="logout_success">注销成功！</string>
    <string name="input_question">请输入问题</string>
    <string name="limit_time">%1$s S</string>
    <string name="change_psd_successful">密码修改成功！</string>
    <string name="change_phone_successful">手机号码修改成功！</string>
    <string name="change_psd_fail">密码修改失败！</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="text_app_not_ok">该功能正在开发中，敬请期待！</string>
    <string name="text_app_start_failed">该应用未安装，请从首页进入！</string>
    <string name="text_app_need_install">该应用未安装，立即下载安装？</string>
    <string name="home_app_file_err">文件出错或安装失败</string>
    <string name="home_app_need_update">检测到较新版本，立即更新？</string>
    <string name="home_app_noneed_update">当前为最新版本，无需更新</string>
    <string name="home_app_noneed_uninstall">该应用未安装，无需卸载</string>
    <string name="home_add_fav_ok">已添加到我的应用！</string>
    <string name="home_fav_exist">您已经添加该应用了</string>
    <string name="text_operate_ok">操作成功！</string>
    <string name="home_app_install_ok">应用安装成功</string>
    <string name="home_app_install_failure">安装未完成或安装失败</string>
    <string name="sdcard_initing">SD卡初始化，请稍候...</string>
    <string name="sdcard_uninstalled">SD卡已被卸载</string>
    <string name="sdcard_init_finish">SD卡初始化完成</string>
    <string name="text_add_app">添加应用</string>
    <string name="text_city_wuhan"><u>武汉</u></string>
    <string name="qd_wallet">擎动钱包</string>
    <string name="qd_net_2013">擎动网络2013</string>
    <string name="jinpaihuiyuan">金牌会员</string>
    <string name="jifen">230分</string>
    <string name="old_psd_null">原密码不能为空!</string>
    <string name="psd_null">密码不能为空!</string>
    <string name="shebei">设 备</string>
    <string name="phoneNum_null">手机号不能为空！</string>
    <string name="mobile_number_error">请输入11位手机号码</string>
    <string name="mobile_segment_error">该号码段不存在</string>
    <string name="auth_code_segment_error">验证码位数不对</string>
    <string name="auth_code_null">验证码不能为空</string>
    <string name="user_login">用户登录</string>
    <string name="login_psd">登录密码：</string>
    <string name="receiver">收货人：</string>
    <string name="login_psd_change">登录密码</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">正在登录...</string>
    <string name="fill_in_psd">请填写密码</string>
    <string name="zhangdan">账 单</string>
    <string name="benyuexiaofei">本月消费 ：¥</string>
    <string name="zongxiaofei">消费总额 ：¥</string>
    <string name="xiaofeie">0.00</string>
    <string name="xiaofe">0.00</string>
    <string name="change_dovila_password">修改多恵拉密码</string>
    <string name="change_sd_password">修改SD卡密码</string>
    <string name="qd">锦江国际商务有限公司 </string>
    <string name="renminbi">¥</string>
    <string name="zhanghao">6225 **** **** 3987</string>
    <string name="riqi">2013-03-09</string>
    <string name="auto_login">自动登录</string>
    <string name="show_psd">显示密码</string>
    <string name="yinhangka">银行卡</string>
    <string name="register">注 册</string>
    <string name="login">登 录</string>
    <string name="find_password">找回密码</string>
    <string name="select_province">选择省份：</string>
    <string name="select_city">选择城市 ：</string>
    <string name="change_city">切换城市</string>
    <string name="text_dovila_pswd">多惠拉密码：</string>
    <string name="text_sd_pswd">智能SD卡密码：</string>
    <string name="text_swpsim_pswd">swp-sim卡密码：</string>
    <string name="text_save_pswd">保存密码</string>
    <string name="text_pswd_tip">初始密码：123456</string>
    <string name="phone">186****1582</string>
    <string name="member_level">会员等级 ： </string>
    <string name="integral">积 分 ： </string>
    <string name="mail">邮 箱 ： </string>
    <string name="user_mail">邮 箱：</string>
    <string name="phone_num_change_success">恭喜，手机号修改成功！</string>
    <string name="text_title_dev_login">设备检测：</string>
    <string name="text_title_dev_check">设备检测</string>
    <string name="text_dialog_dev_login">正在登录设备，请稍后...</string>
    <string name="text_unlock">解 锁</string>
    <string name="text_app_exit">确认退出天下付？</string>
    <string name="text_unlock_tip">请在设备解锁前通过音频口插入多惠拉！</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code">验证码：</string>
    <string name="phone_num">手  机  号：</string>
    <string name="credit_card_holder_hint">请输入持卡人姓名</string>
     <string name="account_num_2">收款账号:</string>
     <string name="account_num_hint_2">请输入收款账号</string>
     <string name="transport_money_2">转账金额:</string>
     <string name="transport_money_hint_2">请输入转账金额</string>
     <string name="mark_txt_2">备注:</string>
     <string name="mark_txt_hint_2">请输入备注</string>
     <string name="btn_sure_transport">确认</string>
     <string name="bankcard_holder">持卡人:</string>
     <string name="bankcard_holder_hint">请输入持卡人</string>
     <string name="bankcard_num">卡号:</string>
     <string name="bankcard_num_hint">请输入卡号</string>
     <string name="belong_bank">所属银行:</string>
     <string name="belong_bank_hint">请输入所属银行</string>
    <string name="coll_acc_txt">账号:</string>
    <string name="coll_acc_hint">请输入账号</string>
    <string name="coll_money_txt">金额:</string>
    <string name="colle_reason_txt">理由:</string>
    <string name="colle_reason_hint">选填</string>
    <string name="btn_sure_payment_txt2">确认付款</string>
    <string name="scan_txt">扫一扫</string>
</resources>