<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layout"
    android:background="@drawable/qianbao_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include 
        android:id="@+id/title_layout"
        layout="@layout/common_title_layout"/>

     <RelativeLayout 
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/linear_frame">
        <TextView 
            android:id="@+id/phoneNum"
            style="@style/login_text_style_one"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/phone_num"/>
        
        <Button 
            android:id="@+id/getAuthCode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:textColor="@color/g999999"
            android:background="@color/gededed"
            android:text="@string/get_auth_code"/>
        <Button 
            android:id="@+id/limitTime"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/gffffff"
            android:background="@color/geb7f6e"
            android:text="@string/limit_time"
            android:textSize="16sp"
            android:visibility="gone"/>
        
          <EditText 
            android:id="@+id/phoneNu"
            style="@style/login_text_style_one"
            android:layout_toLeftOf="@id/getAuthCode"
            android:layout_toRightOf="@id/phoneNum"
            android:layout_marginLeft="2dp"
            android:layout_centerVertical="true"
            android:maxLength="11"
            android:numeric="integer"
            android:background="@color/gffffff"/>
    </RelativeLayout>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/linear_frame">
        <TextView 
            style="@style/login_text_style_one"
            android:layout_marginLeft="10dp"
            android:text="@string/auth_code"/>
        
          <EditText 
            android:id="@+id/auth_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/g333333"
            android:background="@color/gffffff"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/linear_frame">
        <TextView 
            style="@style/login_text_style_one"
            android:layout_marginLeft="10dp"
            android:text="@string/new_password"/>
        
          <EditText 
            android:id="@+id/newPsd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:password="true"
            android:singleLine="true"
            android:maxLength="20"
            android:background="@color/gffffff"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/linear_frame">
        <TextView 
            style="@style/login_text_style_one"
            android:layout_marginLeft="10dp"
            android:text="@string/confirm_new_password"/>
        
          <EditText 
            android:id="@+id/confirmNewPsd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:password="true"
            android:singleLine="true"
            android:maxLength="20"
            android:background="@color/gffffff"/>
    </LinearLayout>
    
</LinearLayout>